log
Wed 12 Apr 2023 11:00:24 PM UTC: 
 tests:  0|6
total_score: 0/70
343947d
Wed 12 Apr 2023 11:05:44 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:21: error: ‘HashNode’ undeclared (first use in this function)
   60 |     map->buckets = (HashNode**)calloc(capacity, sizeof(HashNode*));
      |                     ^~~~~~~~
hashmap.c:60:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:31: error: expected expression before ‘)’ token
   60 |     map->buckets = (HashNode**)calloc(capacity, sizeof(HashNode*));
      |                               ^
hashmap.c:68:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘hash’
   68 |     map->hash = defaultHash;
      |        ^~
hashmap.c:68:17: error: ‘defaultHash’ undeclared (first use in this function)
   68 |     map->hash = defaultHash;
      |                 ^~~~~~~~~~~
hashmap.c:69:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘compare’
   69 |     map->compare = defaultCompare;
      |        ^~
hashmap.c:69:20: error: ‘defaultCompare’ undeclared (first use in this function)
   69 |     map->compare = defaultCompare;
      |                    ^~~~~~~~~~~~~~
Compilation failed
5d62ff8
Tue 25 Apr 2023 09:11:44 PM UTC: 
 hashmap.c | 17 -----------------
 1 file changed, 17 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2c7aee1
Tue 25 Apr 2023 09:12:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9ced627
Tue 25 Apr 2023 09:21:21 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
aed8832
Tue 25 Apr 2023 09:27:10 PM UTC: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:16: error: implicit declaration of function ‘hashFunction’ [-Werror=implicit-function-declaration]
   43 | int position = hashFunction(key) % map->capacity;
      |                ^~~~~~~~~~~~
hashmap.c:46:15: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘data’
   46 |     while (map->data[position].key != NULL && strcmp(map->data[position].key, key) != 0) {
      |               ^~
hashmap.c:46:57: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘data’
   46 |     while (map->data[position].key != NULL && strcmp(map->data[position].key, key) != 0) {
      |                                                         ^~
hashmap.c:51:19: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘data’
   51 |     if (strcmp(map->data[position].key, key) == 0) {
      |                   ^~
hashmap.c:56:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘data’
   56 |     map->data[position].key = key;
      |        ^~
hashmap.c:57:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘data’
   57 |     map->data[position].value = value;
      |        ^~
cc1: all warnings being treated as errors
Compilation failed
18d9969
